// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FluidLayoutRowBuilder .addColumn() should add a column to the end of the row by default: after 1`] = `
Object {
  "columns": Array [
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "content": "Added column",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .addColumn() should add a column to the end of the row by default: before 1`] = `
Object {
  "columns": Array [
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .addColumn() should add a column to the provided index: after 1`] = `
Object {
  "columns": Array [
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "content": "Added column",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .addColumn() should add a column to the provided index: before 1`] = `
Object {
  "columns": Array [
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .header() should update header by callback 1`] = `
Object {
  "columns": Array [],
  "header": Object {
    "description": "Row description",
    "title": "Row title",
  },
}
`;

exports[`FluidLayoutRowBuilder .header() should update header by callback returning undefined 1`] = `
Object {
  "columns": Array [],
  "header": undefined,
}
`;

exports[`FluidLayoutRowBuilder .header() should update header by undefined 1`] = `
Object {
  "columns": Array [],
  "header": undefined,
}
`;

exports[`FluidLayoutRowBuilder .header() should update header by value 1`] = `
Object {
  "columns": Array [],
  "header": Object {
    "description": "Row description",
    "title": "Row title",
  },
}
`;

exports[`FluidLayoutRowBuilder .modifyColumn() should modify the column: after 1`] = `
Object {
  "columns": Array [
    Object {
      "content": "Modified column",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .modifyColumn() should modify the column: before 1`] = `
Object {
  "columns": Array [
    Object {
      "content": "Original column",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .modifyColumn() should throw error, when the column at provided index does not exist 1`] = `"Cannot modify the column - column at index 0 does not exist!"`;

exports[`FluidLayoutRowBuilder .modifyColumns() should modify all columns by default: after 1`] = `
Object {
  "columns": Array [
    Object {
      "content": "Modified column 0",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "content": "Modified column 1",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .modifyColumns() should modify all columns by default: before 1`] = `
Object {
  "columns": Array [
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .modifyColumns() should modify selected column only: after 1`] = `
Object {
  "columns": Array [
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "content": "Modified column",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .modifyColumns() should modify selected column only: before 1`] = `
Object {
  "columns": Array [
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "content": "Original column",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .modifyColumns() should modify selected columns only: after 1`] = `
Object {
  "columns": Array [
    Object {
      "content": Object {
        "title": "Modified row 0",
      },
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "content": Object {
        "title": "Modified row 2",
      },
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .modifyColumns() should modify selected columns only: before 1`] = `
Object {
  "columns": Array [
    Object {
      "content": "Original column",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "content": "Original column",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .modifyColumns() should not modify any column, when selection result is undefined: after 1`] = `
Object {
  "columns": Array [
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .modifyColumns() should not modify any column, when selection result is undefined: before 1`] = `
Object {
  "columns": Array [
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .moveColumn() should move the column: after 1`] = `
Object {
  "columns": Array [
    Object {
      "content": "Column 1",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "content": "Column 0",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "content": "Column 2",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .moveColumn() should move the column: before 1`] = `
Object {
  "columns": Array [
    Object {
      "content": "Column 0",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "content": "Column 1",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "content": "Column 2",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .moveColumn() should throw error, when the column at provided index does not exist 1`] = `"Cannot move the column - column at index 0 does not exist!"`;

exports[`FluidLayoutRowBuilder .removeColumn() should remove the column from the row: after 1`] = `
Object {
  "columns": Array [],
}
`;

exports[`FluidLayoutRowBuilder .removeColumn() should remove the column from the row: before 1`] = `
Object {
  "columns": Array [
    Object {
      "content": "Column to remove",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .removeColumn() should throw error, when the column at provided index does not exist 1`] = `"Cannot remove the column - column at index 0 does not exist!"`;

exports[`FluidLayoutRowBuilder .removeColumns() should not remove any column, when selection result is undefined: after 1`] = `
Object {
  "columns": Array [
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .removeColumns() should not remove any column, when selection result is undefined: before 1`] = `
Object {
  "columns": Array [
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .removeColumns() should remove all columns by default: after 1`] = `
Object {
  "columns": Array [],
}
`;

exports[`FluidLayoutRowBuilder .removeColumns() should remove all columns by default: before 1`] = `
Object {
  "columns": Array [
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .removeColumns() should remove selected column only: after 1`] = `
Object {
  "columns": Array [
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .removeColumns() should remove selected column only: before 1`] = `
Object {
  "columns": Array [
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "content": "Column to remove",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .removeColumns() should remove selected columns only: after 1`] = `
Object {
  "columns": Array [
    Object {
      "content": "Column to keep 1",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "content": "Column to keep 2",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder .removeColumns() should remove selected columns only: before 1`] = `
Object {
  "columns": Array [
    Object {
      "content": "Column to keep 1",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "content": "Column to keep 2",
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
    Object {
      "size": Object {
        "xl": Object {
          "heightAsRatio": 50,
          "widthAsGridColumnsCount": 12,
        },
      },
    },
  ],
}
`;

exports[`FluidLayoutRowBuilder constructors .for() should throw error, when the row is damaged 1`] = `"Provided data must be IFluidLayoutRow!"`;
